sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:10: error: ';' expected but 'if' found.
	} if (!inv) {return;}
          ^